LS-2302 - reworking models and endpoints for v2 - dish, list, tag, layouts