@@ -1,8 +1,7 @@
 /*
  * The List Shop
  *
- * Copyright (c) 2022.
- *
+ * Copyright (c) 2022-2026.
  */
 
 package com.meg.listshop.lmt.dish.impl;
@@ -15,13 +14,14 @@ import com.meg.listshop.conversion.service.ConversionService;
 import com.meg.listshop.lmt.api.exception.ObjectNotFoundException;
 import com.meg.listshop.lmt.api.exception.UserNotFoundException;
 import com.meg.listshop.lmt.api.model.FractionType;
-import com.meg.listshop.lmt.api.model.RatingUpdateInfo;
 import com.meg.listshop.lmt.api.model.TagType;
 import com.meg.listshop.lmt.data.entity.DishEntity;
 import com.meg.listshop.lmt.data.entity.DishItemEntity;
 import com.meg.listshop.lmt.data.entity.TagEntity;
 import com.meg.listshop.lmt.data.pojos.DishDTO;
 import com.meg.listshop.lmt.data.pojos.DishItemDTO;
+import com.meg.listshop.lmt.data.pojos.RatingInfoDTO;
+import com.meg.listshop.lmt.data.pojos.TagInfoDTO;
 import com.meg.listshop.lmt.data.repository.DishItemRepository;
 import com.meg.listshop.lmt.data.repository.DishRepository;
 import com.meg.listshop.lmt.dish.DishService;
@@ -338,13 +338,13 @@ public class DishServiceImpl implements DishService {
         // tags
         List<DishItemEntity> tags = dish.getItems().stream()
                 .filter(di -> includedInStandard.contains(di.getTag().getTagType()))
-                .collect(Collectors.toList());
-        tags.sort(Comparator.comparing(functionGetTagName));
+                .sorted(Comparator.comparing(functionGetTagName))
+                .toList();
 
         // ratings
-        RatingUpdateInfo ratings = tagService.getRatingUpdateInfoForDishIds(Collections.singletonList(dishId));
+        List<RatingInfoDTO> ratingTags = dishItemRepository.getRatingsForDish(dishId);
 
-        return new DishDTO(dish, ingredients, tags, ratings);
+        return new DishDTO(dish, ingredients, tags, ratingTags);
     }
 
     @Override
@@ -455,15 +455,13 @@ public class DishServiceImpl implements DishService {
     private void setModifiersFromRawModifiers(DishItemDTO dishItemDTO, DishItemEntity dishItemEntity, TagEntity tag) {
         List<String> rawModifiers = dishItemDTO.getRawModifiers();
         if (rawModifiers == null || rawModifiers.isEmpty()) {
-
-
             dishItemEntity.setRawModifiers(null);
             dishItemEntity.setMarker(null);
             dishItemEntity.setUnitSize(DEFAULT_UNIT_SIZE);
             dishItemEntity.setModifiersProcessed(true);
             return;
         }
-        dishItemEntity.setRawModifiers(FlatStringUtils.flattenListToString(rawModifiers, "|"));
+        dishItemEntity.setRawModifiers(FlatStringUtils.flattenListToString(rawModifiers, "\\|"));
         if (tag.getConversionId() != null) {
             fillIngredientModifiers(tag.getConversionId(), rawModifiers, dishItemEntity);
             dishItemEntity.setModifiersProcessed(true);
